--- a/style.css
+++ b/style.css
@@ -140,7 +140,21 @@ h1 {
     font-family: 'Gilroy600';
     padding-bottom: 32px;
 }
+#mirrorWithEmail {
+    padding: 0 0 60px;
 
+}
+#mirrorWithEmail h2{
+    text-align: center;
+    font-size: 48px;
+    padding-bottom: 30px;    
+}
+#mirrorWithEmail .container div{
+    width: 800px;
+    margin: auto;
+    font-size: 22px;
+    text-align: center;
+}
 .about__us-info {
     display: inline-block;
     max-width: 565px;
@@ -711,6 +725,16 @@ h1 {
     }
     .header{
         padding-bottom: 0;
+    }
+    #mirrorWithEmail{
+        padding-top: 40px;
+    }
+    #mirrorWithEmail h2{
+        font-size: 27px;
+    }
+    #mirrorWithEmail .container div{
+        width: 100%;
+        font-size: 16px;
     }
     .header__content{
         flex-direction: column;
