--- a/style.css
+++ b/style.css
@@ -141,7 +141,8 @@ h1 {
     padding-bottom: 32px;
 }
 #mirrorWithEmail {
-    padding: 0 0 60px;
+    padding: 60px 0 60px;
+    background-color: rgba(255,90,90,.3 );
 
 }
 #mirrorWithEmail a{
@@ -151,6 +152,9 @@ h1 {
 #mirrorWithEmail h2{
     text-align: center;
     font-size: 48px;
+    display: flex;
+    gap: 9px;
+    justify-content: center;
     padding-bottom: 30px;    
 }
 #mirrorWithEmail .container div{
@@ -207,7 +211,7 @@ h1 {
 }
 
 .safety {
-    padding: 196px 0;
+    padding: 120px 0;
 }
 
 .safety__container {
@@ -270,7 +274,7 @@ h1 {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    gap: 140px;
+    gap: 125px;
 }
 
 .footer__list {
@@ -291,7 +295,7 @@ h1 {
     font-size: 25px;
     font-family: 'Gilroy600';
     display: block;
-    margin: 30px auto;
+    margin: 50px auto 0;
     cursor: pointer;
     border-radius: 4px;
 }
@@ -451,7 +455,7 @@ h1 {
 }
 
 .howToGetAccess_photosBlock2 {
-    padding-bottom: 93px;
+    padding-bottom: 40px;
 }
 
 .howToGet__chrome2 {
@@ -541,7 +545,7 @@ h1 {
 }
 
 #whyWeAreBlocked {
-    padding: 196px 0;
+    padding: 135px 0;
 }
 
 #whyWeAreBlocked h2 {
