--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ h1 {
 }
 #mirrorWithEmail {
     padding: 60px 0 60px;
-    background-color: rgba(255,90,90,.3 );
+    background-color: rgba(255,90,90,.2);
 
 }
 #mirrorWithEmail a{
@@ -153,6 +153,7 @@ h1 {
     text-align: center;
     font-size: 48px;
     display: flex;
+    /* align-items: center; */
     gap: 9px;
     justify-content: center;
     padding-bottom: 30px;    
